# ArequestHelper

./: .gitignore  MANIFEST  README.md  setup.py  test.py
arequestsHelper/: arequestsHelper.py
arequests_helper/: __init__.py  ignore.py  main.py  pyproject.toml  test.py
