[build-system]
requires = ["hatchling","aiohttp", "requests"]
build-backend = "hatchling.build"

[project]
name = "arequests-helper"
version = "0.0.2"
authors = [
  { name="Vitalii Haruk", email="garuk1vitalik@gmail.com" },
]
description = "This pakage helps to work with aiohttp requests in many threads"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Harukvitalii/modules/tree/main/arequests_helper"
"Bug Tracker" = "https://github.com/Harukvitalii/modules/issues"